chore(build): 降低 Java 版本依赖至 17
- 将文档中技术栈的 Java 版本由 21 改为 17
- 修改 README 和相关文档徽章显示 Java 版本为 17
- 更新 changelog 和贡献指南中 JDK 版本要求为 17
- 调整构建配置，pom.xml 中 java.version 设置为 17
- 修正源代码中多处使用 LinkedList.getFirst() 改为 get(0)，避免依赖 LinkedList 特殊接口